--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -14,10 +14,18 @@
 	var b = s.substring(0, n-8);
 	var e = s.substring(n-8);
 	console.log("[INFO] s = " + s + ", n = " + n + ", b = " + b + ", e = " + e);
-	window.document.write('<a class="image-reference" href="'
-		+ b + '.en.html" title="En anglais ?" >'
-		+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-		+ 'src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" /></a>');
+	if (e == '.fr.html') {
+		window.document.write('<a class="image-reference" href="'
+			+ b + '.en.html" title="En anglais ?" >'
+			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
+			+ 'src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" /></a>'); 
+	};
+	if (e == '.en.html') {
+		window.document.write('<a class="image-reference" href="'
+			+ b + '.fr.html" title="In French?" >'
+			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
+			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
+	};
 </script>
 </div>
 <!--<div id="google_translate_element"></div>
