--- a/.templates/localtoc.fr.html
+++ b/.templates/localtoc.fr.html
@@ -8,6 +8,6 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if display_toc %}
-  <h3><a href="{{ pathto(master_doc) }}">Table des matières locale</a></h3>
+  <h3>Table des matières locale</h3>
   {{ toc }}
 {%- endif %}
