--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -25,15 +25,8 @@
 {% block extrahead %}
   <!-- BETA responsive -->
   <meta name="viewport" content="width=device-width, maximum-scale=2.0, initial-scale=1, target-densitydpi=device-dpi"/>
-  <meta name="author" content="Lilian BESSON (lbesson.bitbucket.org)" />
-  <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen" />
-  <!-- Dublin Core Metadata -->
-  <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
-    <meta name="DC.Title" content="Lilian Besson sur le web" />
-    <meta name="DC.Language" content="fr" />
-    <meta name="DC.Creator" content="Lilian Besson" />
-    <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
-    <meta name="DC.Date" content="2014-01-31" />
+  <meta name="author" content="Lilian Besson" />
+  <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
   <meta name="google-translate-customization" content="a85661a1c6e97576-fa60e54e6e66fb19-g69b2d76b91463205-17" />
   <!-- RSS workflow (from perso.crans.org/besson) -->
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site"
@@ -42,8 +35,8 @@
         href="{{ pathto('_static/.besson.png', true)|e }}" />
   <!-- BETA responsive -->
   <link rel="stylesheet" media="screen and (min-width: 680px)" href="{{ pathto('_static/forkit.css', true)|e }}">
-  <link rel="stylesheet" href="{{ pathto('_static/buttons.css', true)|e }}">
-  <link rel="stylesheet" href="{{ pathto('_static/nprogress.css', true)|e }}">
+  <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/buttons.css', true)|e }}">
+  <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/nprogress.css', true)|e }}">
   <link rel="stylesheet" href="{{ pathto('_static/hacks.css', true)|e }}">
   <!-- jQuery.Noty. (Source: http://needim.github.io/noty/#installation) -->
    <script type="text/javascript" src="{{ pathto('_static/noty/jquery.noty.packaged.min.js', true)|e }}"></script>
@@ -56,7 +49,7 @@
   <!-- vein.js (https://github.com/israelidanny/veinjs)-->
    <!--<script type="text/javascript" src="{{ pathto('_static/vein.js', true)|e }}"></script>-->
 <script type="text/javascript">
- if (typeof console !== 'undefined') { console.log("[INFO] Loading jQuery.noty, Moustrap, NProgress and forkit..."); };
+ console.log("[INFO] Loading jQuery.noty, Moustrap, NProgress and forkit...");
  /* jQuery.noty plugin */
     $.noty.defaults = {
         layout: 'bottomRight', theme: 'defaultTheme', type: 'alert',
@@ -95,19 +88,17 @@
 </script>
 {{ super() }}
 <a class="forkit" data-text="Sur BitBucket ?" data-text-detached="Tout est OpenSource !" href="http://bitbucket.org/lbesson">
-<img style="position: absolute; top: 0; right: 0; border: 0;" src="" alt="Consultez mes dépôts git!" /></a>
+<img style="position: absolute; top: 0; right: 0; border: 0;" alt="Consultez mes dépôts git!" /></a>
 {% endblock %}
 
-{% block relbaritems %}<!-- Display info if Javascipt available. -->
+{% block relbaritems %}
  <script type="text/javascript">
- </script>
- <script type="text/javascript">
-  function writeLocationOfThePage(beforetext, aftertext, openstyletext, openstylelink) {
+  function writeLocationOfThePage(beforetext, aftertext) {
     if (screen.width > 480) {
-    window.document.write(beforetext + "<span style=\"" + openstyletext + "\">Page '"
-      + "<a style=\"" + openstylelink + "\" title=\"Cette page\" href=\"" + window.location.protocol + "//" + window.location.host + window.location.pathname
+    window.document.write(beforetext + "<div id=locationOfThePage>Page '"
+      + "<a title=\"Cette page\" href=\"" + window.location.protocol + "//" + window.location.host + window.location.pathname
       + "\">" + window.location.protocol + "//" + window.location.host + window.location.pathname
-      + "</a>'</span>" + aftertext);
+      + "</a>'</div>" + aftertext);
     };
     var s = window.location.pathname;
     var n = s.length;
@@ -127,7 +118,7 @@
         + 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
     };
   };
-  writeLocationOfThePage("<li>", "</li>", "color: grey; font-size: 100%", "color: grey; text-decoration: underline");
+  writeLocationOfThePage("<li>", "</li>");
  </script>
  <noscript><li><span style="color: red">(JavaScript is disabled)</span></li></noscript> 
 {% endblock %}
@@ -143,25 +134,25 @@
 <div class="footer">
   <script type="text/javascript">NProgress.start();</script>
   <script type="text/javascript">
-	function changeStyle(color) {
-		if (color != ""){
+	function changeStyle(newcolor) {
+		if (newcolor != "") {
+			console.log("[INFO] Loading the stylesheet '" + ("_static/" + newcolor + ".css") + "'");
 			$("head").append(
-		    	$("<link/>", {href: ("_static/" + color + ".css?1"), rel: "stylesheet"})
+		    	$("<link/>", {href: ("_static/" + newcolor + ".css"), rel: "stylesheet"})
 		    );
-		    noty({text: ("<b>Il va faire tout " + color + " !</b></br><small>Style bien changé ?</small>"), timeout: 2000});
+		    noty({text: ("<b>Il va faire tout " + newcolor + " !</b></br><small>Style bien changé ?</small>"), timeout: 2000});
 	} };
   </script>
-  <script type="text/javascript" src="{{ pathto('_static/layout.noty.js', true)|e }}"></script>
-  <script type="text/javascript" src="{{ pathto('_static/forkit.js', true)|e }}"></script>
+	<script type="text/javascript" src="{{ pathto('_static/layout.noty.js', true)|e }}"></script>
+	<script type="text/javascript" src="{{ pathto('_static/forkit.js', true)|e }}"></script>
 	<!-- Smooth Scroll plugin (source: https://github.com/kswedberg/jquery-smooth-scroll) -->
 	 <script type="text/javascript" src="{{ pathto('_static/jquery.smooth-scroll.min.js', true)|e }}"></script>
 	<!-- jQuery TimeAgo plugin (source : http://timeago.yarp.com/) -->
 	 <script type="text/javascript" src="{{ pathto('_static/jquery.timeago.js', true)|e }}"></script>
 	<!-- scrollUp jQuery plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
 	 <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script>
-  <!-- JavaScript (one big is quicker than many small...) -->
 <script type="text/javascript">
-console.log("[INFO] Starting main JS content when document will be ready ! (C) Lilian BESSON, 2011-2014.");
+console.log("[INFO] Starting main JS content when document will be ready ! © Lilian BESSON, 2011-2014.");
   NProgress.inc();
 // Put all "embedded" script into a $(document).ready(function() {... });
  $(document).ready(function() {
@@ -235,19 +226,18 @@ console.log("[INFO] Starting main JS content when document will be ready ! (C) L
  Mousetrap.bind(["i", "home"], function() { alert("Going to index.html"); location.href="index.html";});    
 {% if next %}Mousetrap.bind(["right", "n"], function() { alert("Going to next <a href=\"{{ next.link|e }}\">{{ next.link|e }}</a>"); location.href="{{ next.link|e }}";});{% endif %}
 {% if last_updated %}Mousetrap.bind(["u"], function() { //'%d %b %Y, %Hh:%Mm:%Ss'
-   var last_updated_value = "{{ last_updated }}" || "31 01 2014, 00h:30m:14s";
-    var day   = last_updated_value.substring(0,  2 ) || "31";
-    var month = last_updated_value.substring(3,  6 ) || "01"; // FIXME convert Sep -> 09, Oct -> 10 ect...
+   var last_updated_value = "{{ last_updated }}" || "06 02 2014, 00h:30m:14s";
+    var day   = last_updated_value.substring(0,  2 ) || "06";
+    var month = last_updated_value.substring(3,  6 ) || "02"; // FIXME convert Sep -> 09, Oct -> 10 ect...
     var year  = last_updated_value.substring(7,  11) || "2014";
     var hours = last_updated_value.substring(13, 15) || "12";
     var mins  = last_updated_value.substring(17, 19) || "00";
     var secs  = last_updated_value.substring(21, 23) || "00";
    alert(" Cette page a été générée le " + last_updated_value
     + "</br></br>\nSoit <b>" + jQuery.timeago( year + "-" + month + "-" + day + "T" + hours + ":" + mins + ":" + secs + "+02:00") + "</b>"
-    + ".</br></br>\n(C) Lilian BESSON 2011-2014.</br>\n Merci au plugin jQuery.TimeAgo pour le calcul!", {layout:'center', type:'success'});
+    + ".</br></br>\n© Lilian BESSON 2011-2014.</br>\n <small>Merci au plugin jQuery.TimeAgo pour le calcul !</small>", {layout:'center', type:'success'});
  });{% endif %}
-// Put here all JS code, and its dependencies before.
-// Closing the $(document).ready call
+// Put here all JS code, and its dependencies before closing the $(document).ready call
  });
  </script>
  <a href="https://bitbucket.org/lbesson/web-sphinx/changeset/master" title="Last modifications">Derniers changements</a>.
@@ -302,29 +292,27 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
      In fact, it is a simple analysis over the hostname :
       - Apache is used on almost every other server I used,
       - nginx is used on my personnal machine (as a test, august 2013 - sept. 2013). -->
-<script type="text/javascript">
- if (window.location.host.substring(0,6) == 'jarvis') {
- window.document.write("<li><a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.4 on "
-  + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>"); 
- }
- else {
- window.document.write("<li><a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on "
-  + window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a></li>"); 
- };
-  NProgress.inc();
-</script>
-<noscript>
-<li><a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
-</noscript>
-</ul>
-</div></div> 
-<!--
- * This file is © Lilian Besson, 2011-2014.
+<li><script type="text/javascript">
+	if (window.location.host.substring(0,6) == 'jarvis') {
+	window.document.write("<a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.4 on "
+	+ window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
+	}
+	else {
+	window.document.write("<a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on "
+	+ window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
+	};
+	NProgress.inc();
+	</script>
+	<noscript>
+	<a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a>
+	</noscript>
+</li></ul></div></div> 
+<!-- This file is © Lilian Besson, 2011-2014.
  * I'm a Computer Science and Mathematics student, at ENS de Cachan.
  * This file layout.html is part of my web pages, generated with Sphinx.
  * Those pages are hosted
  *  - here on the Crans network, http://perso.crans.org/besson or http://besson.qc.to;
- *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson or http://lbesson.qc.to;
+ *  - here at ENS de Cachan, http://www.dptinfo.ens-cachan.fr/~lbesson or http://lbesson.qc.to (DEAD);
  *  - sometimes on my machine, http://jarvis.crans.org/ (only locally on the crans network).
  *
  * This document is a Jinja Template, to modify all the HTML pages produced
