--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -1,6 +1,6 @@
 {#
     .templates/layout.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    ~~~~~~~~~~~~~~~~~~~~~~
 
     Page principale. (default version)
 
@@ -29,13 +29,12 @@
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
   <meta name="google-translate-customization" content="a85661a1c6e97576-fa60e54e6e66fb19-g69b2d76b91463205-17" />
   <!-- RSS workflow (from perso.crans.org/besson) -->
-  <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site"
-        href="http://perso.crans.org/besson/rss.xml" />
-  <link rel="shortcut icon" type="image/png"
-        href="{{ pathto('_static/.besson.png', true)|e }}" />
-  <!-- BETA responsive -->
+  <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
+  <link rel="shortcut icon" type="image/png" href="{{ pathto('_static/.besson.png', true)|e }}" />
   <link rel="stylesheet" media="screen and (min-width: 680px)" href="{{ pathto('_static/forkit.css', true)|e }}">
-  <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/buttons.css', true)|e }}">
+  <!-- BETA new version of bootstrap -->
+  <!-- <link rel="stylesheet" media="screen" href="{{ pathto('_static/bootstrap.min.css', true)|e }}"> -->
+  <!-- <link rel="stylesheet" media="screen" href="{{ pathto('_static/bootstrap-theme.min.css', true)|e }}"> -->
   <link rel="stylesheet" media="screen and (min-width: 380px)" href="{{ pathto('_static/nprogress.css', true)|e }}">
   <link rel="stylesheet" href="{{ pathto('_static/hacks.css', true)|e }}">
   <!-- jQuery.Noty. (Source: http://needim.github.io/noty/#installation) -->
@@ -95,10 +94,10 @@
  <script type="text/javascript">
   function writeLocationOfThePage(beforetext, aftertext) {
     if (screen.width > 480) {
-    window.document.write(beforetext + "<div id=locationOfThePage>Page '"
+    window.document.write(beforetext + "<span class=\"locationOfThePage\">"
       + "<a title=\"Cette page\" href=\"" + window.location.protocol + "//" + window.location.host + window.location.pathname
       + "\">" + window.location.protocol + "//" + window.location.host + window.location.pathname
-      + "</a>'</div>" + aftertext);
+      + "</a></span>" + aftertext);
     };
     var s = window.location.pathname;
     var n = s.length;
@@ -106,16 +105,16 @@
     var e = s.substring(n-8);
     console.log("[INFO] s = " + s + ", n = " + n + ", b = " + b + ", e = " + e);
     if (e == '.fr.html') {
-      window.document.write('<a class="image-reference" href="'
+      window.document.write('<li><a class="image-reference" href="'
         + b + '.en.html" title="En anglais ?" >'
-        + '<img style="width:31px; height:20px; position: relative; padding-left: 10px;"'
-        + 'src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" /></a>'); 
+        + '<img style="width:31px; height:20px; position: relative; padding-left: 10px; padding-top: 3px;"'
+        + 'src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" /></a></li>'); 
     };
     if (e == '.en.html') {
-      window.document.write('<a class="image-reference" href="'
+      window.document.write('<li><a class="image-reference" href="'
         + b + '.fr.html" title="In French?" >'
-        + '<img style="width:31px; height:20px; position: relative; padding-left: 10px;"'
-        + 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
+        + '<img style="width:31px; height:20px; position: relative; padding-left: 10px; padding-top: 3px;"'
+        + 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a></li>');
     };
   };
   writeLocationOfThePage("<li>", "</li>");
