C'est bizarre, j'ai l'impression d'avoir tout réglé mais le chargement est TRES long.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -32,6 +32,7 @@
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
   <link rel="shortcut icon" type="image/png" href="{{ pathto('_static/.besson.png', true)|e }}" />
   <link rel="stylesheet" media="screen and (min-width: 680px)" href="{{ pathto('_static/forkit.css', true)|e }}">
+  <link rel="stylesheet" media="screen" href="{{ pathto('_static/buttons.css', true)|e }}">
   <!-- BETA new version of bootstrap -->
   <!-- <link rel="stylesheet" media="screen" href="{{ pathto('_static/bootstrap.min.css', true)|e }}"> -->
   <!-- <link rel="stylesheet" media="screen" href="{{ pathto('_static/bootstrap-theme.min.css', true)|e }}"> -->
@@ -45,8 +46,6 @@
    <script type="text/javascript" src="{{ pathto('_static/nprogress.js', true)|e }}"></script>
   <!-- Forkit.js (http://hakim.se/lab/forkit.js)-->
    <script type="text/javascript" src="{{ pathto('_static/forkit.js', true)|e }}"></script>
-  <!-- vein.js (https://github.com/israelidanny/veinjs)-->
-   <!--<script type="text/javascript" src="{{ pathto('_static/vein.js', true)|e }}"></script>-->
 <script type="text/javascript">
  console.log("[INFO] Loading jQuery.noty, Moustrap, NProgress and forkit...");
  /* jQuery.noty plugin */
