--- a/.templates/validator.html
+++ b/.templates/validator.html
@@ -8,7 +8,8 @@
     :license: GPLv3, see LICENSE for details.
 #}
 <h3>W3C validators</h3>
-<div id="supportBadges">
+<small>Malheureusement, les codes CSS et HTML ne sont plus valides désormais!</small>
+<div class="supportBadges">
 <a class="image-reference" href="http://validator.w3.org/check?uri=referer" title="XHTML validator" >
  <img style="width:88px;height:31px" alt="XHTML 1.0 valide ?"
      src="{{ pathto('_images/.valid-xhtml10.png', true)|e }}" /></a>
