--- a/header.html
+++ b/header.html
@@ -27,13 +27,13 @@
   <meta name="viewport" content="width=device-width, maximum-scale=2.0, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian Besson" />
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
-  <!-- <meta name="google-translate-customization" content="a85661a1c6e97576-fa60e54e6e66fb19-g69b2d76b91463205-17" /> -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
   <link rel="shortcut icon" type="image/png" href="//perso.crans.org/besson/_static/.besson.png" />
   <link rel="stylesheet" media="screen and (min-width: 680px)" href="//perso.crans.org/besson/_static/forkit.css" />
   <link rel="stylesheet" media="screen" href="//perso.crans.org/besson/_static/buttons.css" />
   <link rel="stylesheet" media="screen and (min-width: 380px)" href="//perso.crans.org/besson/_static/nprogress.css" />
+  <link rel="stylesheet" href="//perso.crans.org/besson/_static/basic.css" type="text/css" />
   <link rel="stylesheet" href="//perso.crans.org/besson/_static/hacks.css" />
   <!-- jQuery.Noty. (Source: http://needim.github.io/noty/#installation) -->
    <script type="text/javascript" src="//perso.crans.org/besson/_static/noty/jquery.noty.packaged.min.js"></script>
