--- a/.templates/social_icons.fr.html
+++ b/.templates/social_icons.fr.html
@@ -13,5 +13,5 @@
   </ul>
   <ul class="details">
     <li><p style="font-size:80%;">Tél.: <a href="tel:100101011101001100111101100001_2">+336 2841 2257</a></p></li>
-    <li><p style="font-size:80%;"><a style="color:blue;" href="mailto:besson[at]crans[.]org">besson[at]crans[.]org</a></p></li>
+    <li><p style="font-size:80%;"><a href="mailto:besson[at]crans[.]org">besson[at]crans[.]org</a></p></li>
   </ul>
