--- a/header.html
+++ b/header.html
@@ -2,8 +2,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Affichage des dossiers</title>
-    <link rel="stylesheet" href="//perso.crans.org/besson/_static/default.css" type="text/css" />
-    <link rel="stylesheet" href="//perso.crans.org/besson/_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="http://perso.crans.org/besson/_static/default.css" type="text/css" />
+    <link rel="stylesheet" href="http://perso.crans.org/besson/_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
@@ -13,35 +13,33 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="//perso.crans.org/besson/_static/jquery.js"></script>
-    <script type="text/javascript" src="//perso.crans.org/besson/_static/underscore.js"></script>
-    <script type="text/javascript" src="//perso.crans.org/besson/_static/doctools.js"></script>
-    <script type="text/javascript" src="//perso.crans.org/besson/_static/translations.js"></script>
+    <script type="text/javascript" src="http://perso.crans.org/besson/_static/jquery.js"></script>
+    <script type="text/javascript" src="http://perso.crans.org/besson/_static/underscore.js"></script>
+    <script type="text/javascript" src="http://perso.crans.org/besson/_static/doctools.js"></script>
+    <script type="text/javascript" src="http://perso.crans.org/besson/_static/translations.js"></script>
     <link rel="search" type="application/opensearchdescription+xml"
           title="Recherchez dans "
-          href="//perso.crans.org/besson/_static/opensearch.xml"/>
-    <link rel="shortcut icon" href="//perso.crans.org/besson/_static/.besson.png"/>
-    <link rel="top" title="" href="//perso.crans.org/besson/index.html" />
+          href="http://perso.crans.org/besson/_static/opensearch.xml"/>
+    <link rel="shortcut icon" href="http://perso.crans.org/besson/_static/.besson.png"/>
+    <link rel="top" title="" href="http://perso.crans.org/besson/index.html" />
   <!-- BETA responsive -->
   <meta name="viewport" content="width=device-width, maximum-scale=2.0, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian Besson" />
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
   <!-- RSS workflow (from perso.crans.org/besson) -->
   <link rel="alternate" type="application/rss+xml" title="Suivre l'évolution de mon site" href="http://perso.crans.org/besson/rss.xml" />
-  <link rel="shortcut icon" type="image/png" href="//perso.crans.org/besson/_static/.besson.png" />
-  <link rel="stylesheet" media="screen and (min-width: 680px)" href="//perso.crans.org/besson/_static/forkit.css" />
-  <link rel="stylesheet" media="screen" href="//perso.crans.org/besson/_static/buttons.css" />
-  <link rel="stylesheet" media="screen and (min-width: 380px)" href="//perso.crans.org/besson/_static/nprogress.css" />
-  <link rel="stylesheet" href="//perso.crans.org/besson/_static/basic.css" type="text/css" />
-  <link rel="stylesheet" href="//perso.crans.org/besson/_static/hacks.css" />
+  <link rel="stylesheet" media="screen and (min-width: 680px)" href="http://perso.crans.org/besson/_static/forkit.css" />
+  <link rel="stylesheet" media="screen" href="http://perso.crans.org/besson/_static/buttons.css" />
+  <link rel="stylesheet" media="screen and (min-width: 380px)" href="http://perso.crans.org/besson/_static/nprogress.css" />
+  <link rel="stylesheet" href="http://perso.crans.org/besson/_static/hacks.css" />
   <!-- jQuery.Noty. (Source: http://needim.github.io/noty/#installation) -->
-   <script type="text/javascript" src="//perso.crans.org/besson/_static/noty/jquery.noty.packaged.min.js"></script>
+   <script type="text/javascript" src="http://perso.crans.org/besson/_static/noty/jquery.noty.packaged.min.js"></script>
   <!-- MouseTrap.js (http://craig.is/killing/mice) -->
-   <script async type="text/javascript" src="//perso.crans.org/besson/_static/mousetrap.min.js"></script>
+   <script async type="text/javascript" src="http://perso.crans.org/besson/_static/mousetrap.min.js"></script>
   <!-- NProgress.js (https://github.com/rstacruz/nprogress)-->
-   <script type="text/javascript" src="//perso.crans.org/besson/_static/nprogress.js"></script>
+   <script type="text/javascript" src="http://perso.crans.org/besson/_static/nprogress.js"></script>
   <!-- Forkit.js (http://hakim.se/lab/forkit.js)-->
-   <script async type="text/javascript" src="//perso.crans.org/besson/_static/forkit.js"></script>
+   <script async type="text/javascript" src="http://perso.crans.org/besson/_static/forkit.js"></script>
 <script type="text/javascript">
  console.log("[INFO] Loading jQuery.noty, Moustrap, NProgress and forkit...");
  /* jQuery.noty plugin */
@@ -90,8 +88,8 @@
       <h3>Navigation</h3>
       <ul>
  <li><a href="http://lbesson.bitbucket.org" title="Page principale : http://lbesson.bitbucket.org/">
-  <img src="//perso.crans.org/besson/_static/.besson.png" alt="" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
- <li><a href="//perso.crans.org/besson/index.html">Lilian Besson</a> &raquo;</li>
+  <img src="http://perso.crans.org/besson/_static/.besson.png" alt="" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
+ <li><a href="http://perso.crans.org/besson/index.html">Lilian Besson</a> &raquo;</li>
 
  <script type="text/javascript">
   function writeLocationOfThePage(beforetext, aftertext) {
