--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -18,13 +18,13 @@
 		window.document.write('<a class="image-reference" href="'
 			+ b + '.en.html" title="En anglais ?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-			+ 'src="{{ pathto('_images/.en.gif', true)|e }}" alt="En anglais ?" /></a>'); 
+			+ 'src="{{ pathto('_images/.en.gif', true)|e }}?1" alt="En anglais ?" /></a>'); 
 	};
 	if (e == '.en.html') {
 		window.document.write('<a class="image-reference" href="'
 			+ b + '.fr.html" title="In French?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
-			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}" alt="In French?" /></a>');
+			+ 'src="{{ pathto('_images/.fr.gif', true)|e }}?1" alt="In French?" /></a>');
 	};
 </script>
 </div>
