--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -207,7 +207,6 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
    setTimeout( function(){ NProgress.done(); }, 1000);
  });
  </script>
- <script async type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}?1"></script>
  <a href="https://bitbucket.org/lbesson/web-sphinx/changeset/master" title="Last modifications">Derniers changements</a>.
 Une remarque ? Une question ? Cette page
   <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a> est là pour ça !<br/>
@@ -261,20 +260,21 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       - Apache is used on almost every other server I used,
       - nginx is used on my personnal machine. -->
 <li><script type="text/javascript">
-	if ( (window.location.host.substring(0,6) == 'jarvis') || (window.location.host.substring(0,9) == '127.0.0.1') ) {
-	window.document.write("<a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.4 on "
-	+ window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
-	}
-	else {
-	window.document.write("<a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on "
-	+ window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
-	};
-	NProgress.inc();
-	</script>
-	<noscript>
-	<a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}?1" style="width: 80.0px; height: 15.0px;" /></a>
-	</noscript>
-</li></ul></div></div> 
+  if ( (window.location.host.substring(0,6) == 'jarvis') || (window.location.host.substring(0,9) == '127.0.0.1') ) {
+  window.document.write("<a class=\"image-reference\" title=\"nginx\" href=\"http://nginx.org/en/\"><img alt=\"Web server : nginx 1.4.4 on "
+  + window.location.host + "\" src=\"{{ pathto('_images/.nginx_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
+  }
+  else {
+  window.document.write("<a class=\"image-reference\" title=\"Apache\" href=\"http://httpd.apache.org/ABOUT_APACHE.html\"><img alt=\"Web server : Apache v2.2.4 on "
+  + window.location.host + "\" src=\"{{ pathto('_images/.apache_80_15.png', true)|e }}\" style=\"width: 80.0px; height: 15.0px;\" /></a>"); 
+  };
+  NProgress.inc();
+  </script>
+  <noscript>
+  <a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}?1" style="width: 80.0px; height: 15.0px;" /></a>
+  </noscript>
+</li></ul></div> 
+<script async type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}?1"></script></div>
 <!-- This file is © Lilian Besson, 2011-2014.
  * I'm a Computer Science and Mathematics student, at ENS de Cachan.
  * This file layout.html is part of my web pages, generated with Sphinx.
