--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -10,8 +10,8 @@
 {% extends "!layout.html" %}
 {% block doctype %}<!DOCTYPE html>{% endblock %}
 {% block rootrellink %}
- <li><a href="http://lbesson.bitbucket.org" title="Page principale : http://lbesson.bitbucket.org/">
-  <img src="{{ pathto('_static/.besson.png', true)|e }}?1" alt="" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
+ <li><a href="http://perso.crans.org/besson/" title="Page principale">
+  <img src="{{ pathto('_static/.besson.png', true)|e }}?1" alt="http://besson.qc.to/" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
  <li><a href="{{ pathto('index') }}">{{ shorttitle }}</a>{{ reldelim1 }}</li>
 {% endblock %}
 {# Expériences. Liste des blocks utilisables.
@@ -24,7 +24,7 @@
 
 {% block extrahead %}
   <!-- BETA responsive -->
-  <meta name="viewport" content="width=device-width, maximum-scale=2.0, initial-scale=1, target-densitydpi=device-dpi"/>
+  <meta name="viewport" content="width=device-width, maximum-scale=2.5, initial-scale=1, target-densitydpi=device-dpi"/>
   <meta name="author" content="Lilian Besson" />
   <meta name="keywords" content="lbesson,besson,naereen,Naereen,lilian.besson,lilian,naereencorp,naereencorp.lbesson,Naereen Corp,noreen,Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchhiking" />
   <!-- RSS workflow (from perso.crans.org/besson) -->
@@ -102,16 +102,18 @@
     var e = s.substring(n-8);
     console.log("[INFO] s = " + s + ", n = " + n + ", b = " + b + ", e = " + e);
     if (e == '.fr.html') {
-      window.document.write('<li><a class="image-reference" href="'
+      window.document.write('<li class="right"><a class="image-reference" href="'
         + b + '.en.html" title="En anglais ?" >'
-        + '<img style="width:31px; height:20px; position: relative; padding-left: 10px; padding-top: 3px;"'
-        + 'src="{{ pathto('_images/.en.gif', true)|e }}?1" alt="En anglais ?" /></a></li>'); 
+        // + '<img class="languageswitch" src="{{ pathto('_images/.en.gif', true)|e }}?1" alt="En anglais ?" />'
+        + 'En anglais ?'
+        + '</a> | </li>'); 
     };
     if (e == '.en.html') {
-      window.document.write('<li><a class="image-reference" href="'
+      window.document.write('<li class="right"><a class="image-reference" href="'
         + b + '.fr.html" title="In French?" >'
-        + '<img style="width:31px; height:20px; position: relative; padding-left: 10px; padding-top: 3px;"'
-        + 'src="{{ pathto('_images/.fr.gif', true)|e }}?1" alt="In French?" /></a></li>');
+        // + '<img class="languageswitch" src="{{ pathto('_images/.fr.gif', true)|e }}?1" alt="In French?" />'
+        + 'In French?'
+        + '</a> | </li>');
     };
   };
   writeLocationOfThePage("<li>", "</li>");
@@ -153,7 +155,8 @@ console.log("[INFO] Starting main JS content when document will be ready ! © Li
  $(document).ready(function() {
 // Smooth Scroll jQuery plugin
  $('a').smoothScroll({
-  offset: -31, direction: 'top', // one of 'top' or 'left'
+  offset: ((screen.width > 680) ? -31 : 0), // offset BETA responsive
+  direction: 'top', // one of 'top' or 'left'
   easing: 'swing', speed:  300, autoCoefficent: 3, // coefficient for "auto" speed
   preventDefault: true,
  });
@@ -274,7 +277,11 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
   <a class="image-reference" title="Apache" href="http://httpd.apache.org/ABOUT_APACHE.html"><img alt="Web server : Apache v2.2.4" src="{{ pathto('_images/.apache_80_15.png', true)|e }}?1" style="width: 80.0px; height: 15.0px;" /></a>
   </noscript>
 </li></ul></div> 
-<script async type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}?1"></script></div>
+<script async type="text/javascript" src="{{ pathto('_static/ga.js', true)|e }}?1"></script>
+<!--<noscript>-->
+<img src="https://ga-beacon.appspot.com/UA-38514290-1/{{ pagename|e }}{{ file_suffix|e }}?pixel"></img>
+<!--</noscript>-->
+</div>
 <!-- This file is © Lilian Besson, 2011-2014.
  * I'm a Computer Science and Mathematics student, at ENS de Cachan.
  * This file layout.html is part of my web pages, generated with Sphinx.
