--- a/.templates/language-selector.html
+++ b/.templates/language-selector.html
@@ -15,7 +15,7 @@
 	var e = s.substring(n-8);
 	console.log("[INFO] s = " + s + ", n = " + n + ", b = " + b + ", e = " + e);
 	if (e == '.fr.html') {
-		window.document.write('<h3>Cette page en anglais ?</h3><a class="image-reference" href="'
+		window.document.write('<h3>Lire en anglais ?</h3><a class="image-reference" href="'
 			+ b + '.en.html" title="En anglais ?" >'
 			+ '<img style="width:36px; height:23px; display:block; margin-left:auto; margin-right:auto;"'
 		    + 'src="{{ pathto('_images/.en.gif', true)|e }}?1" alt="En anglais ?" /></a>'); 
